# gaoreports

./: README.md  pyproject.toml
.github/workflows/: manual.yml  scheduled.yml
data/1978-10-06/: 507887.json
data/1985-10-10/: RCED-86-9.json
data/1999-10-01/: AIMD-10.1.22.json
data/1999-11-29/: GGD-00-4.json  GGD-00-5.json  RCED-00-17.json
data/1999-12-10/: HEHS-00-20.json
data/1999-12-15/: GGD-00-23.json
data/1999-12-17/: NSIAD-00-31.json
data/1999-12-20/: GGD-00-42.json
data/1999-12-22/: HEHS-00-8.json
data/1999-12-23/: AIMD-00-55.json
data/1999-12-28/: GGD-00-22.json
data/2000-01-01/: 163434.json  SP-00-11.json
data/2000-01-06/: NSIAD-00-32.json
data/2000-01-10/: RCED-00-51R.json
data/2000-01-11/: NSIAD-00-59R.json
data/2000-01-12/: OGC-00-16.json
data/2000-01-14/: AIMD-00-53R.json  AIMD-00-60R.json
data/2000-01-16/: HEHS-00-24.json
data/2000-01-18/: B-158766.json  HEHS-00-21.json
data/2000-01-19/: AIMDHEHS-00-56.json  RCED-00-29.json
data/2000-01-20/: RCED-00-21.json  RCED-00-31.json
data/2000-01-21/: GGD-00-46.json  RCEDNSIAD-00-55.json
data/2000-01-24/: GGD-00-48.json  HEHS-00-28.json  OCG-00-2.json  OGC-00-17.json
data/2000-01-25/: HEHS-00-31.json  RCED-00-38.json
data/2000-01-26/: GGD-00-35.json  NSIAD-00-30.json
data/2000-01-27/: AIMD-00-65R.json  AIMDOGC-00-68R.json  HEHS-00-40R.json  RCED-00-44.json  T-AIMD-00-70.json  T-NSIAD-00-77.json
data/2000-01-28/: HEHS-00-32.json  RCED-00-22.json  RCED-00-24.json
data/2000-01-31/: GGD-00-28.json  GGD-00-40.json  HEHS-00-35.json  (+2 more)
gaoreports/: scrape.py
(+19796 files in other folders)
